# vibectl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DISTRIBUTION.md  IMPLEMENTATION_PLAN.md  LICENSE  MEMORY.md  Makefile  PLANNED_CHANGES.md  PR_DESCRIPTION.md  README.md  RECENT.md  REFACTORING.md  RULES.md  STRUCTURE.md  TESTING.md  TODO-SERVER.md  TODO.md  UPDATES.md  bump_version.py  conftest.py  detailed_analysis.txt  flake.nix  imports_analysis.txt  pylock.toml  pyproject.toml
.cursor-rules/: ruff-preferred.mdc  test-mocking.yaml
.cursor/rules/: autonomous-commits.mdc  changelog.mdc  commit-message.mdc  dry-test-fixtures.mdc  feature-worktrees.mdc  generated-code.mdc  interactive-commands.mdc  logging-best-practices.mdc  no-bazel.mdc  no-llm-in-tests.mdc  project-structure.mdc  python-venv.mdc  ruff-preferred.mdc  rules.mdc  slow-tests.mdc  test-coverage.mdc  test-mocking.mdc
.github/workflows/: changelog.yml  tests.yml
docs/: CONFIG.md  MODEL_KEYS.md  PORT_FORWARD.md  intelligent_apply.md  intelligent_edit.md  llm-proxy-server.md  plugin_system.md  predicate_evaluation.md  proxy-client-security.md
examples/: README.md
examples/k8s-sandbox/: Dockerfile  README.md  STRUCTURE.md  compose.yml  run.sh  sandbox-entrypoint.sh  start.sh
examples/manifests/: README.md  diff-initial-state.yaml
examples/plugins/: README.md  annotating-patch-v1.json  apply-basic-demo-v1.json  apply-comprehensive-demo-v1.json  clumsy-vibe-v1.json  devious-organizer-vibe-v1.json  enhanced-patch-summary-v1.json  focused-recovery-suggestions-v1.json  intelligent-edit-enhanced-v1.json  memory-update-counter-v1.json  minimal-events-summary-v1.json  minimal-patch-summary-v1.json  paranoid-security-vibe-v1.json  security-focused-check-v1.json  smart-port-selection-v1.json  terse-minimalist-vibe-v1.json  verbose-explainer-vibe-v1.json
prof/: combined.prof  test_create_vibe_no_request.prof
scripts/: run_parallel_tests.sh  version.py
tests/: TESTING.md  conftest.py  fixtures.py  test_acme_client.py  test_acme_coverage_gaps.py  test_acme_manager.py  test_alpn_multiplexer.py  test_api_errors.py  test_auto_cmd.py  test_ca_manager.py  test_cert_utils.py  test_cli.py  test_cli_cluster_info.py  test_cli_create.py  test_cli_delete.py  test_cli_describe.py  test_cli_get.py  test_cli_global_flag_transduction.py  test_cli_instructions.py  test_cli_just.py  test_cli_logs.py  test_cli_memory.py  test_cli_port_forward.py  test_cli_rollout.py  test_cli_scale.py  test_cli_theme.py  test_cli_version.py  test_cli_vibe.py  test_cli_wait.py  test_command_handler.py  test_command_handler_edge_cases.py  test_command_handler_memory.py  test_command_handler_port_forward.py  test_command_handler_resources.py  test_command_handler_utils.py  test_command_output.py  test_command_processing.py  test_config.py  test_config_utils.py  test_console.py  (+68 more)
tests/execution/: test_apply.py  test_check_logic.py
tests/security/: test_audit.py  test_config.py  test_response_validation.py  test_sanitizer.py
tests/server/: test_acme_bad_nonce.py  test_acme_client.py  test_acme_coverage_gaps.py  test_acme_manager.py  test_acme_readiness.py  test_acme_server_paths.py  test_alpn_multiplexer.py  test_alpn_tls_version_enforcement.py  test_certificate_reload.py  test_config_cli_commands.py  test_config_io.py  test_config_reload.py  test_grpc_hsts_interceptor.py  test_grpc_server.py  test_hsts_functionality.py  test_http01_race_condition_bug.py  test_http_challenge_server.py  test_jwt_interceptor.py  test_limit_backend.py  test_llm_proxy_server.py  test_metrics.py  test_overrides.py  test_rate_limit_flags.py  test_rate_limit_interceptor.py  test_server_config.py  test_server_coverage_edge_cases.py  test_server_limits_info.py  test_server_main.py  test_server_main_acme_bootstrap.py  test_server_main_acme_comprehensive.py  test_server_main_additional.py  test_server_main_ca.py  test_server_main_ca_coverage.py  test_server_main_cli_coverage.py  test_throttle_logging.py  test_tls_alpn_challenge_server.py
tests/subcommands/: test_apply_cmd.py  test_audit_cmd.py  test_check_cmd.py  test_cluster_info_cmd.py  test_create_cmd.py  test_delete_cmd.py  test_describe_cmd.py  test_diff_cmd.py  test_events_cmd.py  test_get_cmd.py  test_logs_cmd.py  test_patch_cmd.py  test_port_forward_cmd.py  test_rollout_cmd.py  test_scale_cmd.py  test_setup_proxy_cmd.py  test_version_cmd.py  test_wait_cmd.py
typings/llm/: __init__.pyi
vibectl/: __init__.py  cli.py  command_handler.py  config.py  console.py  grpc_server.py  k8s_utils.py  live_display.py  live_display_watch.py  llm_proxy.py  llm_utils.py  logutil.py  memory.py  model_adapter.py  output_processor.py  plugins.py  prompt.py  proxy.py  proxy_model_adapter.py  schema.py  truncation_logic.py  types.py  utils.py
vibectl/execution/: apply.py  check.py  edit.py  vibe.py
vibectl/prompts/: apply.py  cluster_info.py  context.py  create.py  delete.py  describe.py  diff.py  edit.py  events.py  get.py  logs.py  memory.py  patch.py  port_forward.py  recovery.py  rollout.py  scale.py  schemas.py  shared.py  version.py  vibe.py  wait.py
vibectl/proto/: __init__.py  llm_proxy.proto  llm_proxy_pb2.py  llm_proxy_pb2_grpc.py
vibectl/security/: __init__.py  config.py  sanitizer.py
vibectl/server/: STRUCTURE.md  acme_client.py  acme_manager.py  config.py  (+12 more)
(+216 files in other folders)
