[project]
name = "vibectl"
version = "0.1.0"
description = "A vibes-based alternative to kubectl"
authors = [
    { name = "vibectl Contributors" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "kubernetes>=28.1.0",
    "requests>=2.31.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[project.scripts]
vibectl = "vibectl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["kubernetes.*"]
ignore_missing_imports = true 