[project]
name = "vibectl"
version = "0.1.0"
description = "A vibes-based alternative to kubectl"
authors = [
    { name = "vibectl Contributors" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "kubernetes>=28.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vibectl = "vibectl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["vibectl"]
combine-as-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["kubernetes.*"]
ignore_missing_imports = true 